Corrigido margin do início.

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
             <!-- ================================================== -->
 
             <!-- Início. -->
-            <section id="inicio" class="relative h-screen bg-cover bg-center" style="background-image: url('images/index_inicio.jpg');">
+            <section id="inicio" class="-mt-14 relative h-screen bg-cover bg-center" style="background-image: url('images/index_inicio.jpg');">
                 <div class="absolute inset-0 bg-black bg-opacity-60"></div>
                 <div class="relative z-10 flex flex-col items-center justify-center h-full text-center px-4">
                     <h1 class="titulo-inicio text-white text-2xl md:text-5xl font-bold opacity-0">
