Alterações no layout.

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 
             <!-- Comunicados. -->
             <section id="comunicados" class="scroll-mt-12 min-h-screen p-8 bg-gray-200">
-                <h1 class="titulo-comunicados text-3xl font-bold mb-4 opacity-0">Comunicados 📢</h1>
+                <h1 class="titulo-comunicados text-3xl font-bold opacity-0">Comunicados 📢</h1>
                 <div id="calendario" class="calendario-comunicados opacity-0 w-full max-w-[95vw] sm:max-w-5xl mx-auto mt-12 px-2 sm:px-0"></div>
             </section>
 
@@ -116,8 +116,8 @@
 
                             <!-- Professor 1. -->
                             <div class="swiper-slide flex justify-center">
-                                <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[30rem] flex flex-col items-center text-center">
-                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
+                                <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[40rem] flex flex-col items-center text-center">
+                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-40 h-40 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
                                     <h3 class="font-semibold text-xl">Prof. 1</h3>
                                     <p class="text-base text-gray-600 mt-2">
                                         Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é 
@@ -132,8 +132,8 @@
 
                             <!-- Professor 2. -->
                             <div class="swiper-slide flex justify-center">
-                                <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[30rem] flex flex-col items-center text-center">
-                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-28 h-28 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
+                                <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[40rem] flex flex-col items-center text-center">
+                                    <img src="images/index_historia_2.jpg" alt="Nome" class="w-40 h-40 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
                                     <h3 class="font-semibold text-xl">Prof. 2</h3>
                                     <p class="text-base text-gray-600 mt-2">
                                         Instituição histórica - Fundada em 1895, a Escola Padre Natal Pigatto é 
