--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,10 @@
                 <a href="#postagens" class="nav-bar-links text-xs sm:text-sm">
                     <strong>Postagens <span class="sm:inline">🤳</span></strong>
                 </a>
+                <!-- 
                 <a href="#equipe" class="nav-bar-links text-xs sm:text-sm">
                     <strong>Equipe <span class="sm:inline">👥</span></strong>
-                </a>
+                </a> -->
                 <a href="#contato" class="nav-bar-links text-xs sm:text-sm">
                     <strong>Contato <span class="sm:inline">📞</span></strong>
                 </a>
@@ -107,16 +108,16 @@
 
             <!-- ================================================== -->
 
-            <!-- Equipe. -->
+            <!-- Equipe. 
             <section id="equipe" class="scroll-mt-12 min-h-screen p-8 bg-gray-200">
                 <h1 class="titulo-equipe text-3xl font-bold mb-4">Equipe 👥</h1>
                 <div class="equipe-carrousel opacity-0">
                     <div class="swiper equipe-swiper mt-6">
-                        <div class="swiper-wrapper">
+                        <div class="swiper-wrapper"> -->
 
                             <!-- ================================================== -->
 
-                            <!-- Professor 1. -->
+                            <!-- Professor 1. 
                             <div class="swiper-slide flex justify-center">
                                 <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[40rem] flex flex-col items-center text-center">
                                     <img src="images/index_historia_2.jpg" alt="Nome" class="w-40 h-40 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
@@ -128,11 +129,11 @@
                                         local e também nomeia uma importante avenida do município.
                                     </p>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <!-- ================================================== -->
 
-                            <!-- Professor 2. -->
+                            <!-- Professor 2. 
                             <div class="swiper-slide flex justify-center">
                                 <div class="bg-white rounded-2xl p-8 w-72 sm:w-80 md:w-[28rem] lg:w-[36rem] xl:w-[40rem] flex flex-col items-center text-center">
                                     <img src="images/index_historia_2.jpg" alt="Nome" class="w-40 h-40 rounded-full object-cover border-4 border-[rgb(155,182,255)] shadow mb-6">
@@ -144,15 +145,15 @@
                                         local e também nomeia uma importante avenida do município.
                                     </p>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <!-- ================================================== -->
 
-                        </div>
+                        <!-- </div>
                         <div class="swiper-pagination mt-4"></div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- ================================================== -->
 
