--- a/public/pages/admin/login.html
+++ b/public/pages/admin/login.html
@@ -47,14 +47,14 @@
 particlesJS("particles-js", {
   "particles": {
     "number": { "value": 200, "density": { "enable": true, "value_area": 800 } },
-    "color": { "value": "#ff375a" },
+    "color": { "value": "#3786e1" },
     "shape": { "type": "circle" },
     "opacity": { "value": 0.4 },
     "size": { "value": 3, "random": true },
     "line_linked": {
       "enable": true,
       "distance": 130,
-      "color": "#ff9baf",
+      "color": "#3786e1",
       "opacity": 0.3,
       "width": 1
     },
