--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -14,8 +14,8 @@
 
   <style>
     html, body {
-      --primary: rgb(225, 55, 90);
-      --secondary: rgb(255, 155, 175);
+      --primary: rgb(55, 134, 225);
+      --secondary: rgb(155, 182, 255);
       height: 100%;
       margin: 0;
       background: linear-gradient(to bottom, #e6f0ff, #fdfdff);
@@ -48,7 +48,7 @@
     }
 
     .inputs:focus {
-      box-shadow: 0 0 0 2px #ff9baf;
+      box-shadow: 0 0 0 2px #3786e1;
     }
 
     .container h2 {
@@ -202,14 +202,14 @@
     particlesJS("particles-js", {
       "particles": {
         "number": { "value": 200, "density": { "enable": true, "value_area": 800 } },
-        "color": { "value": "#ff375a" },
+        "color": { "value": "#3786e1" },
         "shape": { "type": "circle" },
         "opacity": { "value": 0.4 },
         "size": { "value": 3, "random": true },
         "line_linked": {
           "enable": true,
           "distance": 130,
-          "color": "#ff9baf",
+          "color": "#3786e1",
           "opacity": 0.3,
           "width": 1
         },
