--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -12,83 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <style>
-    html, body {
-      --primary: rgb(55, 134, 225);
-      --secondary: rgb(155, 182, 255);
-      height: 100%;
-      margin: 0;
-      background: linear-gradient(to bottom, #e6f0ff, #fdfdff);
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      overflow-x: hidden;
-    }
-
-    html::selection {
-    background-color: var(--primary);
-    color: rgb(255, 255, 255);
-  }
-
-    #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-    }
-
-    .container {
-      position: relative;
-      z-index: 2;
-      max-width: 720px;
-      background: rgba(255, 255, 255, 0.75);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.08);
-      backdrop-filter: blur(10px);
-      margin-top: 40px;
-    }
-
-    .inputs:focus {
-      box-shadow: 0 0 0 2px #3786e1;
-    }
-
-    .container h2 {
-      color: var(--primary);
-    }
-
-    label {
-      font-weight: 500;
-      color: var(--primary);
-    }
-
-    .form-control, .form-select {
-      background: rgba(255, 255, 255, 0.5);
-      border-radius: 12px;
-      border: 1px solid #ccc;
-    }
-
-    .form-control:focus, .form-select:focus {
-      background: #fff;
-      box-shadow: 0 0 0 2px --secondary;
-    }
-
-    .btn-success {
-      background-color: var(--primary) !important;
-      border: none;
-    }
-
-    .btn-success:hover {
-      background-color: var(--primary) !important;
-    }
-
-    .preview-img {
-      max-width: 150px;
-      max-height: 150px;
-      object-fit: cover;
-      margin: 5px;
-      border-radius: 12px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-    }
-  </style>
+  <!-- CSS. -->
+  <link href="../../styles/admin/post.css" rel="stylesheet">
 </head>
 
 <body class="animate__animated animate__fadeIn">
@@ -153,6 +78,16 @@
           <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Fechar"></button>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div id="abas">
+      <input class="aba_buttons" type="button" value="Postagens">
+      <input class="aba_buttons" type="button" value="Comunicados">
+    </div>
+    <div id="container_postagens_comunicados">
+
     </div>
   </div>
 
