--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,10 @@
                 <!-- 
                 <a href="#equipe" class="nav-bar-links text-xs sm:text-sm">
                     <strong>Equipe <span class="sm:inline">👥</span></strong>
-                </a> -->
+                </a> 
                 <a href="#contato" class="nav-bar-links text-xs sm:text-sm">
                     <strong>Contato <span class="sm:inline">📞</span></strong>
-                </a>
+                </a> -->
                 <a href="#historia" class="nav-bar-links text-xs sm:text-sm">
                     <strong>História <span class="sm:inline">📖</span></strong>
                 </a>
@@ -157,14 +157,14 @@
 
             <!-- ================================================== -->
 
-            <!-- Contato. -->
+            <!-- Contato. 
             <section id="contato" class="scroll-mt-12 min-h-screen p-8 bg-gray-200">
                 <h1 class="titulo-contato text-3xl font-bold mb-4 opacity-0">Contato 📞</h1>
                 <a href="https://www.instagram.com/pigattonatal/" class="links flex gap-1 items-center">
                     <img src="images/instagram_icon.png" class="w-7">
                     <strong>Instagram</strong>
                 </a>
-            </section>
+            </section> -->
 
             <!-- ================================================== -->
 
@@ -206,6 +206,25 @@
             </section>
 
             <!-- ================================================== -->
+
+            <!-- Footer. -->
+            <section id="footer" class="bg-[rgb(55,134,225)] w-full flex items-center justify-center p-4 text-white">
+                <div id="footer_columns" class="flex gap-10">
+                    <div id="coluna_contato" class="gap-2 flex flex-col">
+                        <h1 class="font-bold">Contato:</h1>
+                        <a href="https://www.instagram.com/pigattonatal/" class="flex gap-1 items-center">
+                            <img src="images/instagram_icon.png" class="w-7">
+                            <p class="hover:text-[rgb(255,100,160)]">Instagram</p>
+                        </a>
+                        <p>(41) 3392-6206</p>
+                    </div>
+                    <div id="disclaimer" class="flex flex-col gap-1">
+                        <h1 class="font-bold">Sobre o site:</h1>
+                        <p>Este site foi feito voluntariamente, não possuindo fins lucrativos, para apoio à escola</p>
+                        <p>e entrega de projeto de extensão referente a faculdade Descomplica (UniAmérica).</p>
+                    </div>
+                </div>
+            </section>
 
         <!-- Fecha sessões. -->
         </main>
