--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -16,6 +16,9 @@
   <link href="../../styles/admin/post.css" rel="stylesheet">
 </head>
 
+
+
+
 <body class="animate__animated animate__fadeIn">
 
   <div id="particles-js"></div>
@@ -81,15 +84,56 @@
     </div>
   </div>
 
-  <div class="container">
-    <div id="abas">
-      <input class="aba_buttons" type="button" value="Postagens">
-      <input class="aba_buttons" type="button" value="Comunicados">
-    </div>
-    <div id="container_postagens_comunicados">
 
+  <!-- HTML principal omitido para focar no necessário -->
+
+  <div class="container mt-5">
+    <h3 class="mb-3">Postagens Cadastradas</h3>
+    <div id="container_postagens_comunicados" class="row gy-3">
+      <!-- As postagens serão inseridas aqui via JS -->
     </div>
   </div>
+
+  <!-- Toast para feedback -->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+    <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body" id="toastMensagem">Mensagem de feedback</div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Fechar"></button>
+      </div>
+    </div>
+  </div>
+
+    <!-- Modal de Edição -->
+  <div class="modal fade" id="modalEdicao" tabindex="-1" aria-labelledby="modalEdicaoLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <form id="formEdicao">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalEdicaoLabel">Editar Postagem</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+          </div>
+          <div class="modal-body">
+            <div class="mb-3">
+              <label for="editTitulo" class="form-label">Título</label>
+              <input type="text" class="form-control" id="editTitulo" required />
+            </div>
+            <div class="mb-3">
+              <label for="editDescricao" class="form-label">Descrição</label>
+              <textarea class="form-control" id="editDescricao" rows="4" required></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-success">Salvar Alterações</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
 
   <!-- Scripts -->
   <script>
