--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -122,6 +122,7 @@
               <label for="editDescricao" class="form-label">Descrição</label>
               <textarea class="form-control" id="editDescricao" rows="4" required></textarea>
             </div>
+            <div id="editImagensContainer" class="d-flex flex-wrap gap-2 mb-3"></div>
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Salvar Alterações</button>
