--- a/public/index.html
+++ b/public/index.html
@@ -209,19 +209,37 @@
 
             <!-- Footer. -->
             <section id="footer" class="bg-[rgb(55,134,225)] w-full flex items-center justify-center p-4 text-white">
-                <div id="footer_columns" class="flex gap-10">
+                <div id="footer_columns" class="flex flex-col md:flex-row gap-6 md:gap-10 text-sm md:text-base">
                     <div id="coluna_contato" class="gap-2 flex flex-col">
                         <h1 class="font-bold">Contato:</h1>
                         <a href="https://www.instagram.com/pigattonatal/" class="flex gap-1 items-center">
                             <img src="images/instagram_icon.png" class="w-7">
                             <p class="hover:text-[rgb(255,100,160)]">Instagram</p>
                         </a>
+                        <a href="https://www.facebook.com/story.php?story_fbid=1370500097631606&id=100040148869963&rdid=zO5WSEK4YddJRoDL" class="flex gap-1 items-center">
+                            <img src="images/facebook_icon.png" class="w-7">
+                            <p class="hover:text-[rgb(255,100,160)]">Facebook</p>
+                        </a>
                         <p>(41) 3392-6206</p>
+                    </div>
+                    <div id="endereço">
+                        <h1 class="font-bold">Endereço:</h1>
+                        <p>R. Mato Grosso, 7971 - Ferraria, Campo Largo - PR, 83608-640</p>
+                        <div id="mapa" class="flex justify-center items-center">
+                            <iframe
+                                class="mt-2 rounded-md border border-white w-full max-w-[300px] h-[200px]"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.3768196205586!2d-49.48159702473262!3d-25.473147577525683!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dd15e422fd7ae7%3A0x6f2145c256da8efb!2sR.%20Mato%20Grosso%2C%207971%20-%20Ferraria%2C%20Campo%20Largo%20-%20PR%2C%2083608-640!5e0!3m2!1spt-BR!2sbr!4v1715353643826!5m2!1spt-BR!2sbr"
+                                width="500"
+                                height="200"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade">
+                            </iframe>
+                        </div>
                     </div>
                     <div id="disclaimer" class="flex flex-col gap-1">
                         <h1 class="font-bold">Sobre o site:</h1>
-                        <p>Este site foi feito voluntariamente, não possuindo fins lucrativos, para apoio à escola</p>
-                        <p>e entrega de projeto de extensão referente a faculdade Descomplica (UniAmérica).</p>
+                        <p>Este site foi feito voluntariamente, não possuindo fins lucrativos, para apoio à escola.</p>
                     </div>
                 </div>
             </section>
