--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -105,6 +105,7 @@
   </div>
 
     <!-- Modal de Edição -->
+
   <div class="modal fade" id="modalEdicao" tabindex="-1" aria-labelledby="modalEdicaoLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -122,7 +123,9 @@
               <label for="editDescricao" class="form-label">Descrição</label>
               <textarea class="form-control" id="editDescricao" rows="4" required></textarea>
             </div>
-            <div id="editImagensContainer" class="d-flex flex-wrap gap-2 mb-3"></div>
+            <div id="editImagensContainer" class="d-flex flex-wrap gap-2 mb-3">
+              <!-- As imagens serão inseridas aqui via JavaScript -->
+            </div>
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Salvar Alterações</button>
@@ -132,6 +135,7 @@
       </div>
     </div>
   </div>
+
 
 
 
