--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,10 @@
                             <img src="images/facebook_icon.png" class="w-7">
                             <p class="hover:text-[rgb(255,100,160)]">Facebook</p>
                         </a>
-                        <p>(41) 3392-6206</p>
+                        <a class="flex gap-1 items-center">
+                            <img src="images/whatsapp_icon.png" class="w-7">
+                            <p>(41) 9793-1807</p>
+                        </a>
                     </div>
                     <div id="endereço">
                         <h1 class="font-bold">Endereço:</h1>
