add excluir postagem

--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -130,6 +130,8 @@
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Salvar Alterações</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+            <button type="button" class="btn btn-danger" id="btnExcluirPostagem">Excluir Postagem</button>
+
           </div>
         </form>
       </div>
