--- a/public/pages/admin/login.html
+++ b/public/pages/admin/login.html
@@ -11,11 +11,30 @@
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="../../styles/admin/login.css">
+  <style>
+    .modal-content {
+      border-radius: 1.5rem;
+    }
+
+    .modal-body .btn {
+      font-size: 1.1rem;
+      transition: all 0.3s ease;
+    }
+
+    .modal-body .btn:hover {
+      transform: scale(1.05);
+    }
+</style>
 </head>
+
 <body>
 
 <!-- Fundo animado -->
 <div id="particles-js"></div>
+
+
+
+
 
 <!-- Formulário de login -->
 <div class="login-container">
@@ -36,7 +55,26 @@
       </form>
     </div>
   </div>
-  
+
+  <!-- Modal Escolha de Ação -->
+  <div class="modal fade" id="modalEscolha" tabindex="-1" aria-labelledby="modalEscolhaLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content shadow rounded-4">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modalEscolhaLabel">Escolha o Tipo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        </div>
+        <div class="modal-body text-center">
+          <p class="mb-4">O que você deseja acessar?</p>
+          <div class="d-flex justify-content-center gap-4">
+            <a href="../../pages/admin/post.html" class="btn btn-outline-primary px-4 py-2 rounded-pill">Postagem</a>
+            <a href="../../pages/admin/comunicados.html" class="btn btn-outline-success px-4 py-2 rounded-pill">Comunicado</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -74,6 +112,16 @@ particlesJS("particles-js", {
 });
 </script>
 <script type="module" src="../../scripts/admin/login.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    if (sessionStorage.getItem('login_sucesso') === 'true') {
+      const modal = new bootstrap.Modal(document.getElementById('escolhaModal'));
+      modal.show();
+      sessionStorage.removeItem('login_sucesso'); // evita mostrar sempre
+    }
+  });
+</script>
+
 
 
 </body>
