--- a/public/pages/admin/comunicados.html
+++ b/public/pages/admin/comunicados.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- Animate.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- CSS. -->
@@ -54,32 +55,45 @@
       <!-- Imagem Única -->
       <div class="mb-3 d-none" id="grupoUnica">
         <label for="imagemUnica" class="form-label">Escolha a imagem</label>
-        <input class="inputs form-control" type="file" id="imagemUnica" accept="image/*" onchange="previewImagem(this, 'previewUnica')" />
+        <input class="inputs form-control" type="file" id="imagemUnica" accept="image/*"
+          onchange="previewImagem(this, 'previewUnica')" />
         <div id="previewUnica" class="d-flex flex-wrap mt-2"></div>
       </div>
 
       <!-- Carrossel -->
       <div class="mb-3 d-none" id="grupoCarrossel">
         <label for="imagensCarrossel" class="form-label">Escolha até 3 imagens</label>
-        <input class="inputs form-control" type="file" id="imagensCarrossel" accept="image/*" multiple onchange="previewImagem(this, 'previewCarrossel')" />
+        <input class="inputs form-control" type="file" id="imagensCarrossel" accept="image/*" multiple
+          onchange="previewImagem(this, 'previewCarrossel')" />
         <div id="previewCarrossel" class="d-flex flex-wrap mt-2"></div>
       </div>
 
       <!-- Álbum -->
       <div class="mb-3 d-none" id="grupoAlbum">
         <label for="imagensAlbum" class="form-label">Selecione as imagens do álbum</label>
-        <input class="inputs form-control" type="file" id="imagensAlbum" accept="image/*" multiple onchange="previewImagem(this, 'previewAlbum')" />
+        <input class="inputs form-control" type="file" id="imagensAlbum" accept="image/*" multiple
+          onchange="previewImagem(this, 'previewAlbum')" />
         <div id="previewAlbum" class="d-flex flex-wrap mt-2"></div>
+      </div>
+      <div class="form-col">
+        <label for="dataComunicado" class="form-label">Data do Comunicado</label>
+        <div class="input-icon-wrapper">
+          <i class="fas fa-calendar-alt"></i>
+          <input type="date" class="input-with-icon" id="dataComunicado" name="dataComunicado">
+        </div>
       </div>
 
       <!-- Botão -->
-      <button type="submit" class="btn btn-success shadow mt-3 animate__animated animate__pulse animate__infinite">Postar</button>
+      <button type="submit"
+        class="btn btn-success shadow mt-3 animate__animated animate__pulse animate__infinite">Postar</button>
     </form>
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-      <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+      <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert"
+        aria-live="assertive" aria-atomic="true">
         <div class="d-flex">
-          <div class="toast-body" id="toastMensagem">Postagem criada com sucesso!</div>
-          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Fechar"></button>
+          <div class="toast-body" id="toastMensagem">Comunicado criada com sucesso!</div>
+          <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+            aria-label="Fechar"></button>
         </div>
       </div>
     </div>
@@ -89,7 +103,7 @@
   <!-- HTML principal omitido para focar no necessário -->
 
   <div class="container mt-5">
-    <h3 class="mb-3">Comunicado Cadastradas</h3>
+    <h3 class="mb-3">Comunicados Cadastradas</h3>
     <div id="container_postagens_comunicados" class="row gy-3">
       <!-- As postagens serão inseridas aqui via JS -->
     </div>
@@ -97,15 +111,17 @@
 
   <!-- Toast para feedback -->
   <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-    <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert"
+      aria-live="assertive" aria-atomic="true">
       <div class="d-flex">
         <div class="toast-body" id="toastMensagem">Mensagem de feedback</div>
-        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Fechar"></button>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+          aria-label="Fechar"></button>
       </div>
     </div>
   </div>
 
-    <!-- Modal de Edição -->
+  <!-- Modal de Edição -->
 
   <div class="modal fade" id="modalEdicao" tabindex="-1" aria-labelledby="modalEdicaoLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -214,9 +230,10 @@
       },
       "retina_detect": true
     });
-    </script>
-    <script type="module" src="../../scripts/admin/comunicados.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </script>
+  <script type="module" src="../../scripts/admin/comunicados.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+
 </html>
