--- a/public/pages/admin/comunicados.html
+++ b/public/pages/admin/comunicados.html
@@ -75,7 +75,7 @@
           onchange="previewImagem(this, 'previewAlbum')" />
         <div id="previewAlbum" class="d-flex flex-wrap mt-2"></div>
       </div>
-      <div class="form-col">
+      <div class="form-col animate__animated animate__fadeInUp animate__delay-4s">
         <label for="dataComunicado" class="form-label">Data do Comunicado</label>
         <div class="input-icon-wrapper">
           <i class="fas fa-calendar-alt"></i>
@@ -154,7 +154,6 @@
       </div>
     </div>
   </div>
-
 
 
 
