--- a/public/pages/admin/comunicados.html
+++ b/public/pages/admin/comunicados.html
@@ -26,7 +26,12 @@
 
   <div class="container">
 
-    <h2 class="mb-4 animate__animated animate__fadeInDown">Criar Comunicado</h2>
+  <div class="d-flex justify-content-between align-items-center mb-4 animate__animated animate__fadeInDown">
+    <h2 class="mb-0">Criar Comunicado</h2>
+    <a href="post.html" class="btn btn-primary animate__animated animate__fadeIn animate__delay-1s">
+      Ir para Postagens
+    </a>
+  </div>
 
     <form>
       <!-- Título -->
@@ -85,7 +90,8 @@
 
       <!-- Botão -->
       <button type="submit"
-        class="btn btn-success shadow mt-3 animate__animated animate__pulse animate__infinite">Postar</button>
+        class="btn btn-success shadow mt-3 animate__animated animate__pulse animate__infinite">Postar
+      </button>
     </form>
     <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
       <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert"
