--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -26,7 +26,12 @@
   <div class="container">
 
 
-    <h2 class="mb-4 animate__animated animate__fadeInDown">Criar Postagem</h2>
+    <div class="d-flex justify-content-between align-items-center mb-4 animate__animated animate__fadeInDown">
+    <h2 class="mb-0">Criar Postagem</h2>
+    <a href="comunicados.html" class="btn btn-primary animate__animated animate__fadeIn animate__delay-1s">
+      Ir para Comunicados
+    </a>
+  </div>
 
     <form>
       <!-- Título -->
