--- a/public/pages/admin/comunicados.html
+++ b/public/pages/admin/comunicados.html
@@ -109,7 +109,7 @@
   <!-- HTML principal omitido para focar no necessário -->
 
   <div class="container mt-5">
-    <h3 class="mb-3">Comunicados Cadastradas</h3>
+    <h3 class="mb-3">Comunicados Cadastrados</h3>
     <div id="container_postagens_comunicados" class="row gy-3">
       <!-- As postagens serão inseridas aqui via JS -->
     </div>
