--- a/public/pages/admin/comunicados.html
+++ b/public/pages/admin/comunicados.html
@@ -97,7 +97,7 @@
       <div id="toastFeedback" class="toast align-items-center text-white bg-success border-0" role="alert"
         aria-live="assertive" aria-atomic="true">
         <div class="d-flex">
-          <div class="toast-body" id="toastMensagem">Comunicado criada com sucesso!</div>
+          <div class="toast-body" id="toastMensagem">Comunicado criado com sucesso!</div>
           <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
             aria-label="Fechar"></button>
         </div>
@@ -134,7 +134,7 @@
       <div class="modal-content">
         <form id="formEdicao">
           <div class="modal-header">
-            <h5 class="modal-title" id="modalEdicaoLabel">Editar Postagem</h5>
+            <h5 class="modal-title" id="modalEdicaoLabel">Editar Comunicado</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
           </div>
           <div class="modal-body">
@@ -153,7 +153,7 @@
           <div class="modal-footer">
             <button type="submit" class="btn btn-success">Salvar Alterações</button>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-            <button type="button" class="btn btn-danger" id="btnExcluirPostagem">Excluir Postagem</button>
+            <button type="button" class="btn btn-danger" id="btnExcluirPostagem">Excluir Comunicado</button>
 
           </div>
         </form>
