Retorno para início.

--- a/public/pages/admin/post.html
+++ b/public/pages/admin/post.html
@@ -32,6 +32,9 @@
     <a href="comunicados.html" class="btn btn-primary animate__animated animate__fadeIn animate__delay-1s">
       Ir para Comunicados
     </a>
+    <a href="../../index.html#postagens" class="btn btn-green animate__animated animate__fadeIn animate__delay-1s">
+      Ir para Início
+    </a>
 
   </div>
 
