--- a/public/pages/admin/comunicados.html
+++ b/public/pages/admin/comunicados.html
@@ -31,6 +31,9 @@
     <a href="post.html" class="btn btn-primary animate__animated animate__fadeIn animate__delay-1s">
       Ir para Postagens
     </a>
+    <a href="../../index.html#postagens" class="btn btn-green animate__animated animate__fadeIn animate__delay-1s">
+      Ir para Início
+    </a>
   </div>
 
     <form>
